# CMakeList.txt : CMake project for Lab1_c++, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.2)

project ("Lab1_c++")

# Add source to this project's executable.
add_executable (Lab1_c++ "Lab1_c++.cpp" "Lab1_c++.h")

# TODO: Add tests and install targets if needed.
