cmake_minimum_required(version 3.13)
project(simple_example)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(MyCPPLibrary TestJava.cpp)
target_include_directories("Swing.cpp" "Swing.h" "Swing.java")

"C:\Program Files\Java\jdk-14.0.2\include"
"C:\Program Files\Java\jdk-14.0.2\include\win32")

